@@ -74,6 +74,11 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="SkinViewer.resx">
       <DependentUpon>SkinViewer.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,11 +92,19 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SkinViewer.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="SkinViewer.Designer.cs">
       <DependentUpon>SkinViewer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TablessControl.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="UpdateWindow.cs">
       <SubType>Form</SubType>
