@@ -24,7 +24,7 @@ namespace fCraft.ServerGUI {
             PlayerLabel.Text = player.Name;
             SetTextRankColor( Color.GetName( player.Rank.Color ) );
             if ( info.LastIP.Equals( System.Net.IPAddress.None ) ) {
-                textBox1.Text += String.Format( "About {0}&S: Never seen before.\n", info.ClassyName );
+                textBox1.Text += String.Format( "About {0}&S: Never seen before.\r\n", info.ClassyName );
 
             } else {
                 if ( info != null ) {
@@ -32,44 +32,44 @@ namespace fCraft.ServerGUI {
                     if ( info.IsHidden ) {
                         if ( idle.TotalMinutes > 2 ) {
                             if ( player.Can( Permission.ViewPlayerIPs ) ) {
-                                textBox1.Text += String.Format( "About {0}&S: HIDDEN from {1} (idle {2})\n",
+                                textBox1.Text += String.Format( "About {0}&S: HIDDEN from {1} (idle {2})\r\n",
                                                 info.ClassyName,
                                                 info.LastIP,
                                                 idle.ToMiniString() );
                             } else {
-                                textBox1.Text += String.Format( "About {0}&S: HIDDEN (idle {1})\n",
+                                textBox1.Text += String.Format( "About {0}&S: HIDDEN (idle {1})\r\n",
                                                 info.ClassyName,
                                                 idle.ToMiniString() );
                             }
                         } else {
                             if ( player.Can( Permission.ViewPlayerIPs ) ) {
-                                textBox1.Text += String.Format( "About {0}&S: HIDDEN. Online from {1}\n",
+                                textBox1.Text += String.Format( "About {0}&S: HIDDEN. Online from {1}\r\n",
                                                 info.ClassyName,
                                                 info.LastIP );
                             } else {
-                                textBox1.Text += String.Format( "About {0}&S: HIDDEN.\n",
+                                textBox1.Text += String.Format( "About {0}&S: HIDDEN.\r\n",
                                                 info.ClassyName );
                             }
                         }
                     } else {
                         if ( idle.TotalMinutes > 1 ) {
                             if ( player.Can( Permission.ViewPlayerIPs ) ) {
-                                textBox1.Text += String.Format( "About {0}&S: Online now from {1} (idle {2})\n",
+                                textBox1.Text += String.Format( "About {0}&S: Online now from {1} (idle {2})\r\n",
                                                 info.ClassyName,
                                                 info.LastIP,
                                                 idle.ToMiniString() );
                             } else {
-                                textBox1.Text += String.Format( "About {0}&S: Online now (idle {1})\n",
+                                textBox1.Text += String.Format( "About {0}&S: Online now (idle {1})\r\n",
                                                 info.ClassyName,
                                                 idle.ToMiniString() );
                             }
                         } else {
                             if ( player.Can( Permission.ViewPlayerIPs ) ) {
-                                textBox1.Text += String.Format( "About {0}&S: Online now from {1}\n",
+                                textBox1.Text += String.Format( "About {0}&S: Online now from {1}\r\n",
                                                 info.ClassyName,
                                                 info.LastIP );
                             } else {
-                                textBox1.Text += String.Format( "About {0}&S: Online now.\n",
+                                textBox1.Text += String.Format( "About {0}&S: Online now.\r\n",
                                                 info.ClassyName );
                             }
                         }
@@ -77,49 +77,49 @@ namespace fCraft.ServerGUI {
                 } else {
                     if ( player.Can( Permission.ViewPlayerIPs ) ) {
                         if ( info.LeaveReason != LeaveReason.Unknown ) {
-                            textBox1.Text += String.Format( "About {0}&S: Last seen {1} ago from {2} ({3}).\n",
+                            textBox1.Text += String.Format( "About {0}&S: Last seen {1} ago from {2} ({3}).\r\n",
                                             info.ClassyName,
                                             info.TimeSinceLastSeen.ToMiniString(),
                                             info.LastIP,
                                             info.LeaveReason );
                         } else {
-                            textBox1.Text += String.Format( "About {0}&S: Last seen {1} ago from {2}.\n",
+                            textBox1.Text += String.Format( "About {0}&S: Last seen {1} ago from {2}.\r\n",
                                             info.ClassyName,
                                             info.TimeSinceLastSeen.ToMiniString(),
                                             info.LastIP );
                         }
                     } else {
                         if ( info.LeaveReason != LeaveReason.Unknown ) {
-                            textBox1.Text += String.Format( "About {0}&S: Last seen {1} ago ({2}).\n",
+                            textBox1.Text += String.Format( "About {0}&S: Last seen {1} ago ({2}).\r\n",
                                             info.ClassyName,
                                             info.TimeSinceLastSeen.ToMiniString(),
                                             info.LeaveReason );
                         } else {
-                            textBox1.Text += String.Format( "About {0}&S: Last seen {1} ago.\n",
+                            textBox1.Text += String.Format( "About {0}&S: Last seen {1} ago.\r\n",
                                             info.ClassyName,
                                             info.TimeSinceLastSeen.ToMiniString() );
                         }
                     }
                 }
                 // Show login information
-                textBox1.Text += String.Format( "  Logged in {0} time(s) since {1:d MMM yyyy}.\n",
+                textBox1.Text += String.Format( "  Logged in {0} time(s) since {1:d MMM yyyy}.\r\n",
                                 info.TimesVisited,
                                 info.FirstLoginDate );
             }
 
             if ( info.IsFrozen ) {
-                textBox1.Text += String.Format( "  Frozen {0} ago by {1}\n",
+                textBox1.Text += String.Format( "  Frozen {0} ago by {1}\r\n",
                                 info.TimeSinceFrozen.ToMiniString(),
                                 info.FrozenByClassy );
             }
 
             if ( info.IsMuted ) {
-                textBox1.Text += String.Format( "  Muted for {0} by {1}\n",
+                textBox1.Text += String.Format( "  Muted for {0} by {1}\r\n",
                                 info.TimeMutedLeft.ToMiniString(),
                                 info.MutedByClassy );
                 float blocks = ( ( info.BlocksBuilt + info.BlocksDrawn ) - info.BlocksDeleted );
                 if ( blocks < 0 )
-                    textBox1.Text += String.Format( "  &CWARNING! {0}&S has deleted more than built!\n", info.ClassyName );//<---- GlennMR on Au70 Galaxy
+                    textBox1.Text += String.Format( "  &CWARNING! {0}&S has deleted more than built!\r\n", info.ClassyName );//<---- GlennMR on Au70 Galaxy
             }
 
             // Show ban information
@@ -127,21 +127,21 @@ namespace fCraft.ServerGUI {
             switch ( info.BanStatus ) {
                 case BanStatus.Banned:
                     if ( ipBan != null ) {
-                        textBox1.Text += String.Format( "  Account and IP are &CBANNED&S. See &H/BanInfo\n" );
+                        textBox1.Text += String.Format( "  Account and IP are &CBANNED&S. See &H/BanInfo\r\n" );
                     } else {
-                        textBox1.Text += String.Format( "  Account is &CBANNED&S. See &H/BanInfo\n" );
+                        textBox1.Text += String.Format( "  Account is &CBANNED&S. See &H/BanInfo\r\n" );
                     }
                     break;
                 case BanStatus.IPBanExempt:
                     if ( ipBan != null ) {
-                        textBox1.Text += String.Format( "  IP is &CBANNED&S, but account is exempt. See &H/BanInfo\n" );
+                        textBox1.Text += String.Format( "  IP is &CBANNED&S, but account is exempt. See &H/BanInfo\r\n" );
                     } else {
-                        textBox1.Text += String.Format( "  IP is not banned, and account is exempt. See &H/BanInfo\n" );
+                        textBox1.Text += String.Format( "  IP is not banned, and account is exempt. See &H/BanInfo\r\n" );
                     }
                     break;
                 case BanStatus.NotBanned:
                     if ( ipBan != null ) {
-                        textBox1.Text += String.Format( "  IP is &CBANNED&S. See &H/BanInfo\n" );
+                        textBox1.Text += String.Format( "  IP is &CBANNED&S. See &H/BanInfo\r\n" );
 
                     }
                     break;
@@ -163,25 +163,25 @@ namespace fCraft.ServerGUI {
 
                 // Stats
                 if ( info.BlocksDrawn > 500000000 ) {
-                    textBox1.Text += String.Format( "  Built {0} and deleted {1} blocks, drew {2}M blocks, wrote {3} messages.\n",
+                    textBox1.Text += String.Format( "  Built {0} and deleted {1} blocks, drew {2}M blocks, wrote {3} messages.\r\n",
                                     info.BlocksBuilt,
                                     info.BlocksDeleted,
                                     info.BlocksDrawn / 1000000,
                                     info.MessagesWritten );
                 } else if ( info.BlocksDrawn > 500000 ) {
-                    textBox1.Text += String.Format( "  Built {0} and deleted {1} blocks, drew {2}K blocks, wrote {3} messages.\n",
+                    textBox1.Text += String.Format( "  Built {0} and deleted {1} blocks, drew {2}K blocks, wrote {3} messages.\r\n",
                                     info.BlocksBuilt,
                                     info.BlocksDeleted,
                                     info.BlocksDrawn / 1000,
                                     info.MessagesWritten );
                 } else if ( info.BlocksDrawn > 0 ) {
-                    textBox1.Text += String.Format( "  Built {0} and deleted {1} blocks, drew {2} blocks, wrote {3} messages.\n",
+                    textBox1.Text += String.Format( "  Built {0} and deleted {1} blocks, drew {2} blocks, wrote {3} messages.\r\n",
                                     info.BlocksBuilt,
                                     info.BlocksDeleted,
                                     info.BlocksDrawn,
                                     info.MessagesWritten );
                 } else {
-                    textBox1.Text += String.Format( "  Built {0} and deleted {1} blocks, wrote {2} messages.\n",
+                    textBox1.Text += String.Format( "  Built {0} and deleted {1} blocks, wrote {2} messages.\r\n",
                                     info.BlocksBuilt,
                                     info.BlocksDeleted,
                                     info.MessagesWritten );
@@ -190,20 +190,20 @@ namespace fCraft.ServerGUI {
 
                 // More stats
                 if ( info.TimesBannedOthers > 0 || info.TimesKickedOthers > 0 || info.PromoCount > 0 ) {
-                    textBox1.Text += String.Format( "  Kicked {0}, Promoted {1} and banned {2} players.\n", info.TimesKickedOthers, info.PromoCount, info.TimesBannedOthers );
+                    textBox1.Text += String.Format( "  Kicked {0}, Promoted {1} and banned {2} players.\r\n", info.TimesKickedOthers, info.PromoCount, info.TimesBannedOthers );
                 }
 
                 if ( info.TimesKicked > 0 ) {
                     if ( info.LastKickDate != DateTime.MinValue ) {
-                        textBox1.Text += String.Format( "  Got kicked {0} times. Last kick {1} ago by {2}\n",
+                        textBox1.Text += String.Format( "  Got kicked {0} times. Last kick {1} ago by {2}\r\n",
                                         info.TimesKicked,
                                         info.TimeSinceLastKick.ToMiniString(),
                                         info.LastKickByClassy );
                     } else {
-                        textBox1.Text += String.Format( "  Got kicked {0} times.\n", info.TimesKicked );
+                        textBox1.Text += String.Format( "  Got kicked {0} times.\r\n", info.TimesKicked );
                     }
                     if ( info.LastKickReason != null ) {
-                        textBox1.Text += String.Format( "  Kick reason: {0}\n", info.LastKickReason );
+                        textBox1.Text += String.Format( "  Kick reason: {0}\r\n", info.LastKickReason );
                     }
                 }
 
@@ -211,34 +211,34 @@ namespace fCraft.ServerGUI {
                 // Promotion/demotion
                 if ( info.PreviousRank == null ) {
                     if ( info.RankChangedBy == null ) {
-                        textBox1.Text += String.Format( "  Rank is {0}&S (default).\n",
+                        textBox1.Text += String.Format( "  Rank is {0}&S (default).\r\n",
                                         info.Rank.ClassyName );
                     } else {
-                        textBox1.Text += String.Format( "  Promoted to {0}&S by {1}&S {2} ago.\n",
+                        textBox1.Text += String.Format( "  Promoted to {0}&S by {1}&S {2} ago.\r\n",
                                         info.Rank.ClassyName,
                                         info.RankChangedByClassy,
                                         info.TimeSinceRankChange.ToMiniString() );
                         if ( info.RankChangeReason != null ) {
-                            textBox1.Text += String.Format( "  Promotion reason: {0}\n", info.RankChangeReason );
+                            textBox1.Text += String.Format( "  Promotion reason: {0}\r\n", info.RankChangeReason );
                         }
                     }
                 } else if ( info.PreviousRank <= info.Rank ) {
-                    textBox1.Text += String.Format( "  Promoted from {0}&S to {1}&S by {2}&S {3} ago.\n",
+                    textBox1.Text += String.Format( "  Promoted from {0}&S to {1}&S by {2}&S {3} ago.\r\n",
                                     info.PreviousRank.ClassyName,
                                     info.Rank.ClassyName,
                                     info.RankChangedByClassy,
                                     info.TimeSinceRankChange.ToMiniString() );
                     if ( info.RankChangeReason != null ) {
-                        textBox1.Text += String.Format( "  Promotion reason: {0}\n", info.RankChangeReason );
+                        textBox1.Text += String.Format( "  Promotion reason: {0}\r\n", info.RankChangeReason );
                     }
                 } else {
-                    textBox1.Text += String.Format( "  Demoted from {0}&S to {1}&S by {2}&S {3} ago.\n",
+                    textBox1.Text += String.Format( "  Demoted from {0}&S to {1}&S by {2}&S {3} ago.\r\n",
                                     info.PreviousRank.ClassyName,
                                     info.Rank.ClassyName,
                                     info.RankChangedByClassy,
                                     info.TimeSinceRankChange.ToMiniString() );
                     if ( info.RankChangeReason != null ) {
-                        textBox1.Text += String.Format( "  Demotion reason: {0}\n", info.RankChangeReason );
+                        textBox1.Text += String.Format( "  Demotion reason: {0}\r\n", info.RankChangeReason );
                     }
                 }
 
@@ -248,7 +248,7 @@ namespace fCraft.ServerGUI {
                     if ( info != null ) {
                         totalTime = totalTime.Add( info.TimeSinceLastLogin );
                     }
-                    textBox1.Text += String.Format( "  Spent a total of {0:F1} hours ({1:F1} minutes) here.\n",
+                    textBox1.Text += String.Format( "  Spent a total of {0:F1} hours ({1:F1} minutes) here.\r\n",
                                     totalTime.TotalHours,
                                     totalTime.TotalMinutes );
                 }
